--- a/public/index.html
+++ b/public/index.html
@@ -70,9 +70,9 @@
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <script>
+    <!-- <script>
       AOS.init();
-    </script>
+    </script> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
