added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/img/The_X.png" />
     <meta
+      name="description"
+      content="TEDxCornellUniversity 2019: Reframe. Cornell's official TEDx event page. On April 28th, 2019, we're bringing 7 amazing speakers to give TEDx talks in Statler Auditorium. Reserve your spot now for an experience unlike any other at Cornell."
+    />
+    <meta
+      name="keywords"
+      content="TEDxCornell, TEDxCornellUniversity, TEDx, ithaca, TED, speaking,
+      cornell, speaking at cornell, event, cornell ted, ted talk, talk at cornell,
+      cornell events, ted event in ithaca, tedxcu, tedx cu, cu"
+    />
+
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
