--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/img/The_X.png" />
     <meta
       name="description"
-      content="TEDxCornellUniversity 2019: Reframe. Cornell's official TEDx event page. On April 28th, 2019, we're bringing 7 amazing speakers to give TEDx talks in Statler Auditorium. Reserve your spot now for an experience unlike any other at Cornell."
+      content="TEDxCornell 2019: Reframe. Cornell's official TEDx event page. On April 28th, 2019, we're bringing 7 amazing speakers to give TEDx talks in Statler Auditorium. Reserve your spot now for an experience unlike any other at Cornell."
     />
     <meta
       name="keywords"
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TEDxCornellUniversity</title>
+    <title>TEDxCornell</title>
 
     <!-- REACT BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
