don't expect this to work, testing to see if lack of script tag is the issue

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/img/The_X.png" />
-  <meta name="description"
-    content="TEDxCornell 2019: Reframe. Cornell's official TEDx event page. On April 28th, 2019, we're bringing 7 amazing speakers to give TEDx talks in Statler Auditorium. Reserve your spot now for an experience unlike any other at Cornell." />
+  <meta name="description" content="TEDxCornell" />
   <meta name="keywords" content="TEDxCornell, TEDxCornellUniversity, TEDx, ithaca, TED, speaking,
       cornell, speaking at cornell, event, cornell ted, ted talk, talk at cornell,
       cornell events, ted event in ithaca, tedxcu, tedx cu, cu" />
@@ -58,9 +57,8 @@
 
 <body>
   <noscript> You need to enable JavaScript to run this app. </noscript>
-  <!-- <script>
-      AOS.init();
-    </script> -->
+  <script>
+  </script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
